adding github and linkedin links

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"/>
+            onclick="location.href='https://www.linkedin.com/in/ashwin-totagi-6a8324248/'"/>
           <img
             src="./assets/github.png"
             alt="My github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"/>
+            onclick="location.href='https://github.com/ashhwin99'"/>
         </div>
       </div>
     </section>
